3rd and last! header scrolling fix, now the full scroll bar is "visible" for the mouse

--- a/public/css/header.styl
+++ b/public/css/header.styl
@@ -16,7 +16,7 @@
   padding: 0 // remove padding when toolbar is hidden
 
 .sticky-wrapper
-  height: 205px !important
+  height: 215px !important
 
 /* login/menu buttons
 --------------------- */
